footer position changed

--- a/index.html
+++ b/index.html
@@ -723,10 +723,16 @@
     <!-- end of section 4 -->
     
     <!-- footer -->
-    <footer class='footer'>
+    <!-- <footer class='footer flex-item'></footer>
       All rights reserved &copy; Innoweg
-    </footer>
+    </footer> -->
     <!-- end of footer -->
+    <footer class="bg-gray-900 text-white py-8">
+      <div class="container mx-auto">
+        <p class="text-center"> All rights reserved &copy; Innoweg</p>
+      </div>
+    </footer>
+    
   </div>
   <!-- end of main wrapper -->
 
